# GraphFold

./: .gitignore  CMakeLists.txt  README.md  run_fig7_g2miner.sh  run_fig7_graphfold.sh  run_multi_tables_g2miner.sh  run_multi_tables_graphfold.sh  run_table2_g2miner.sh  run_table2_graphfold.sh
datasets/: fetch_all_data.sh  fetch_cit-Patents.sh  fetch_enron.sh  fetch_livej.sh  fetch_mico.sh  fetch_orkut.sh  fetch_soc-LiveMocha.sh  fetch_soc-delicious.sh  fetch_soc-gowalla.sh  fetch_soc-lastfm.sh  fetch_soc-pokec.sh  fetch_youtube.sh
docker/: Dockerfile  build.sh  launch.sh
src/: CFSolver.cuh  CFSolverMultiGPU.cuh  Engine.h  G2MinerSolver.cuh  G2MinerSolverMultiGPU.cuh  MCSolver.cuh  MCSolverMultiGPU.cuh  PatternSolver.cuh  PatternSolverMultiGPU.cuh  TCSolver.cuh  TCSolverMultiGPU.cuh
src/gpu_kernels/: G2Miner_kernels.cuh  clique_kernels.cuh  motif_3_edge_warp.cuh  motif_4_edge_warp.cuh  motif_kernels.cuh  pattern_kernels.cuh  tc_bs_warp_edge.cuh  tc_bs_warp_vertex.cuh  tc_hi_warp_vertex.cuh  tuning_schedules.cuh
src/graph/: graph.h  io.h  operations.cuh  scan.h  scheduler.cc  scheduler.h  search.cuh  set_difference.cuh  set_intersection.cuh
src/utils/: bitsets.h  buffer.h  config.h  cuda_utils.h  flags.h  logging.h  sm_pattern.h  stream.h  timer.h  utils.h
test/: test_G2Miner.cu  test_G2Miner_multigpu.cu  test_cliquefinding.cu  test_cliquefinding_multigpu.cu  test_engine.cu  test_io.cu  test_motifcounting.cu  test_motifcounting_multigpu.cu  test_patternEnum.cu  test_patternEnum_multigpu.cu  test_trianglecounting.cu  test_trianglecounting_multigpu.cu
